routecontroller/integration/fixtures/context-path-route-for-single-fqdn2.yaml
apiVersion: networking.cloudfoundry.org/v1alpha1
kind: Route
metadata:
 name: context-path-route-guid-2
 annotations: {}
 labels:
   app.kubernetes.io/name: context-path-route-guid-2
   app.kubernetes.io/version: cloud-controller-api-version
   app.kubernetes.io/managed-by: cloudfoundry
   app.kubernetes.io/component: cf-networking
   app.kubernetes.io/part-of: cloudfoundry
   cloudfoundry.org/org_guid: cc-org-guid
   cloudfoundry.org/space_guid: cc-space-guid
   cloudfoundry.org/domain_guid: cc-domain-guid
   cloudfoundry.org/route_guid: context-path-route-guid-2
spec:
  host: hostname
  path: /hello/world
  url: hostname.apps.example.com/hello/world
  domain:
    name: apps.example.com
    internal: false
  destinations:
  - weight: 100
    port: 8080
    guid: destination-guid-2
    selector:
      matchLabels:
        cloudfoundry.org/app_guid: cc-app2-guid
        cloudfoundry.org/process_type: web
    app:
      guid: cc-app2-guid
      process:
        type: web
